App Introduce Web 修正首頁的介紹內容 v1.01

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
                            <div class="carousel-item active">
                               <div class="container">
                                  <div class="banner_main">
-                                    <h1 class="banner_taital">Business Agency Profit Your Marketing</h1>
-                                    <p class="banner_text">It is a long established fact that a reader will be distracted by the readable content of a page when</p>
+                                    <h1 class="banner_taital">專業App開發設計</h1>
+                                    <p class="banner_text">專業的App製作團隊, 提供絕佳的App 使用體驗</p>
                                     <div class="btn_main">
                                        <div class="contact_bt active "><a href="#">Contact Us</a></div>
                                        <div class="readmore_bt"><a href="#">Read More</a></div>
