--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
                            <div class="carousel-item">
                               <div class="container">
                                  <div class="banner_main">
-                                    <h1 class="banner_taital">Business Agency Profit Your Marketing</h1>
-                                    <p class="banner_text">It is a long established fact that a reader will be distracted by the readable content of a page when</p>
+                                    <h1 class="banner_taital">後端 REST-API 開發</h1>
+                                    <p class="banner_text">採用業界標準開發套件 Spring-Boot 進行 API 服務開發</p>
                                     <div class="btn_main">
                                        <div class="contact_bt active "><a href="#">Contact Us</a></div>
                                        <div class="readmore_bt"><a href="#">Read More</a></div>
